# nextjs-auth0-fauna

./: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json
api/: auth.py  callback.py  index.py  logout.py  pylintrc  pyproject.toml  requirements.txt  users.py
api/app/: __init__.py  config.py  utils.py
components/: layout.js
pages/: dashboard.js  index.js  profile.js
utils/: api.js  auth.js  user.js
